# wallflow

./: CMakeLists.txt  CMakePresets.json  icon.rc  vcpkg.json  wallflow.rc
include/: config.h  convert.h  displays.h  image_bmp.h  log.h  mem.h  paths.h  repo.h  util.h  wallpapers.h  window.h
src/: config.cpp  convert.cpp  displays.cpp  log.cpp  main.cpp  mem.cpp  paths.cpp  repo.cpp  util.cpp  wallpapers.cpp  window.cpp
